<resources>
    <string name="app_name">Ejemplo Fragmentos Específicos</string>
    <string name="profile_lblSignUpDate">Fecha</string>
    <string name="profile_txtSignUpDate">Fecha</string>
    <string name="profile_lblCivilState">Estado Civil</string>
    <string name="profile_btnSave">Guardar</string>
    <string name="profile_title">Perfil</string>
    <string name="profile_confirmation">Guardado</string>
    <string name="profile_sure">Mensaje</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="profile_save_user">Guardado</string>
    <string name="profile_civil_state">Estado Civil</string>
    <string name="profile_accept">Aceptar</string>
    <string name="profile_mnuSettings">Settings</string>
    <string name="prefProfileCategory_title">Preferencia</string>
    <string name="prefCivilState_defaultValue">Soltero</string>
    <string name="prefCivilState_dialogTitle">Preferencia Estado Civil</string>
    <string name="prefCivilState_key">Estado_civil</string>
    <string name="prefCivilState_title">Estado Civil</string>
    <string name="prefConfirmSave_key">Confirm_Key</string>
    <string name="prefConfirmSave_title">Guardar elección</string>
    <string name="prefAboutCategory_title">Preferencia Acerca De</string>
    <string name="prefWeb_title">Preferencia Web</string>
    <string name="settings_title">Settings</string>
</resources>