<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/prefProfileCategory_title">

        <androidx.preference.ListPreference
            android:defaultValue="@string/prefCivilState_defaultValue"
            android:dialogTitle="@string/prefCivilState_dialogTitle"
            android:entries="@array/civil_states"
            android:entryValues="@array/civil_states_values"
            android:icon="@drawable/ic_people_black_24dp"
            android:key="@string/prefCivilState_key"
            android:title="@string/prefCivilState_title"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="@bool/prefConfirmSave_defaultValue"
            android:icon="@drawable/ic_check_24dp"
            android:key="@string/prefConfirmSave_key"
            android:title="@string/prefConfirmSave_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/prefAboutCategory_title">

        <androidx.preference.Preference
            android:icon="@drawable/ic_web_black_24dp"
            android:persistent="false"
            android:title="@string/prefWeb_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.iessaladillo.es" />
        </androidx.preference.Preference>

    </androidx.preference.PreferenceCategory>

</PreferenceScreen>
