<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSignUpDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/profile_lblSignUpDate"
        app:endIconDrawable="@drawable/ic_today_black_24"
        app:endIconMode="custom"
        app:placeholderText="@string/profile_txtSignUpDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSignUpDate"
            android:layout_width="match_parent"
            android:focusable="false"
            android:layout_height="match_parent"
            android:inputType="none|date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCivilState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/tilSignUpDate"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/profile_lblCivilState"
        app:endIconDrawable="@drawable/ic_arrow_drop_down_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCivilState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCivilState" />

</androidx.constraintlayout.widget.ConstraintLayout>
